verif/test/deca/syntax/invalid/invalid-float-infinity-verif.res
src/test/deca/syntax/invalid/invalid-float-infinity.deca:2:15: no viable alternative at input 'e40'
